--- a/index.html
+++ b/index.html
@@ -280,31 +280,12 @@
         try { await html5QrCode.stop(); } catch(_) {}
       }
 
-      // اطلب الإذن للوصول للكاميرا أولاً (مهم لسفاري iOS وبعض المتصفحات)
+      // عدّد الكاميرات وابدأ المسح مباشرة
       try{
-        statusDiv.innerHTML = 'جاري طلب إذن الكاميرا...';
-        const stream = await navigator.mediaDevices.getUserMedia({ 
-          video: { 
-            facingMode: { ideal: 'environment' },
-            width: { ideal: 1280 },
-            height: { ideal: 720 }
-          } 
-        });
-        // أوقف البث المؤقت حتى نبدأ عبر Html5Qrcode
-        stream.getTracks().forEach(t=>t.stop());
-        statusDiv.innerHTML = 'تم منح إذن الكاميرا. جاري إعداد الماسح...';
-      }catch(err){
-        console.error('رفض إذن الكاميرا/غير متاح', err);
-        statusDiv.innerHTML = 'تعذر الحصول على إذن الكاميرا. الرجاء السماح بالوصول للكاميرا من المتصفح.';
-        barcodeBtn.style.display = 'inline-block';
-        stopBtn.style.display = 'none';
-        return;
-      }
-
-      // بعد منح الإذن، عدّد الكاميرات
-      try{
+        statusDiv.innerHTML = 'جاري إعداد الكاميرا...';
         const cameras = await Html5Qrcode.getCameras();
         cameraSelect.innerHTML = '';
+        
         if(cameras && cameras.length){
           cameras.forEach((cam, idx) => {
             const opt = document.createElement('option');
@@ -313,19 +294,19 @@
             cameraSelect.appendChild(opt);
           });
 
-          // حاول بدء المسح بأول كاميرا، وإن فشل سنستخدم وضع الخلفية
-          await startScanner(cameraSelect.value || cameras[0].id);
+          // ابدأ المسح مباشرة بأول كاميرا
+          await startScanner(cameras[0].id);
 
           cameraSelect.onchange = async ()=>{
             await startScanner(cameraSelect.value);
           };
         } else {
-          // لا توجد كاميرات مرئية بعد التعداد؛ جرّب البدء بوضع البيئة مباشرة
+          // لا توجد كاميرات مرئية، جرّب البدء بوضع البيئة
           await startScanner(null);
         }
       }catch(err){
         console.error('خطأ في جلب الكاميرات', err);
-        // فشل التعداد (قد يحدث في iOS)، جرّب البدء بوضع البيئة
+        // فشل التعداد، جرّب البدء بوضع البيئة مباشرة
         await startScanner(null);
       }
     });
@@ -371,7 +352,10 @@
         showTorchButtonIfSupported: true,
         showZoomSliderIfSupported: true,
         defaultZoomValueIfSupported: 2,
-        useBarCodeDetectorIfSupported: true
+        useBarCodeDetectorIfSupported: true,
+        videoConstraints: {
+          facingMode: "environment"
+        }
       };
 
       // دالة رد ناتج المسح مع تحسينات
@@ -421,7 +405,7 @@
       if(cameraId){
         try{
           statusDiv.innerHTML = 'جاري تشغيل الكاميرا...';
-          await html5QrCode.start({ deviceId: { exact: cameraId } }, config, onScan, onError);
+          await html5QrCode.start(cameraId, config, onScan, onError);
           statusDiv.innerHTML = 'الماسح يعمل - وجه الباركود للكاميرا';
           return;
         }catch(err){
